[package]
name = "data_processing"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3 # 优化等级，0-3，s，z
lto = true # 启用链接时优化
codegen-units = 8 # 减少代码生成单元以提高优化效果

[dependencies]
slint = "1.17.0"
anyhow = "1.0.100"
calamine = "0.31.0"
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.4.0"
encoding_rs = "0.8.35"
polars = { version = "0.51.0", features = ["fmt", "rows"] }
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[build-dependencies]
slint-build = "1.17.0"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = "0.2.118"


# [lib]
# crate-type = ["cdylib", "rlib"]
